# MAIL2MAIL

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  settings.yaml
mail2mail/agents/: orchestrator.py  triage_compose.py
mail2mail/tools/: docproc_tools.py  email_tools.py  housekeeping_tools.py  routing_tools.py  storage_tools.py
