[tool.poetry]
name = "mail2mail"
version = "0.1.0"
description = "Local agentic mail orchestrator using OpenAI Agents SDK"
authors = ["you <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai-agents = "^0.2.9"
openai = "^1.55.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
rich = "^13.7.1"
imapclient = "^3.0.1"
oauthlib = "^3.2.2"
requests-oauthlib = "^2.0.0"
aiohttp = "^3.9.5"
fastapi = "^0.112.0"
uvicorn = {version = "^0.30.6", extras = ["standard"]}
email-parser = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.9"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
